--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: rgb(125, 198, 205);
+    background-image: url('https://i.ytimg.com/vi/BlePM_Id3d0/hqdefault.jpg');
     color: rgb(15, 15, 15);
     padding: 10px;
     font-family: arial;
@@ -46,7 +46,7 @@ main {
     padding: 10px;
 }
 .sidebar-img {
-    width: 200px;
+     width: 200px;
 }
 .content {
     flex: 1;
@@ -61,3 +61,31 @@ main {
 h2, h3 {
     margin: 0px;
 }
+ /* portfolio styles */
+ .content h1 {
+    color: black;
+}
+
+
+#portfolio {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+
+#portfolio li {
+    background: #fff;
+    padding: 10px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+}
+
+
+#portfolio li:hover {
+    background: #eee;
+}
+
+
+#portfolio a {
+    text-decoration: none;
+    color: #454545
